# flow-orchestrator-telemetry-client

./: Cargo.toml  LICENSE  README.md
src/: backend.rs  frontend.rs  gui_frontend.rs  main.rs  terminal_frontend.rs
src/aggregator/: aggregator.rs  mod.rs
src/common/: message.rs  metric.rs  mod.rs
src/source/: endpoint.rs  mod.rs  prometheus_poll_endpoint.rs  zmq_endpoint.rs
