[package]
name = "flow-orchestrator-telemetry-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["terminal_frontend"]
terminal_frontend = ["tui", "crossterm"]

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
clap = { version = "3.0.6", features = ["derive"]}
zeromq = "0.3.3"
json = "0.12.4"
crossterm = { version = "0.22.1", optional = true }
tui = {version = "0.16.0", features = ["crossterm"], optional = true }